# SuperAgent

./: .dockerignore  .env.example  .gitignore  .replit  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SampleTasks.md  app.py  docker-compose.yml  gateway_server.py  openai_flowchart  pyproject.toml  replit.md  requirements.txt  setup_ui.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: workflow_gap.yml
.github/workflows/: ci.yml  release.yml
attached_assets/: Pasted-PS-C-Users-Prashant-Dey-kendr-run-Do-the-research-about_1774998414394.txt  Pasted-PS-C-Users-Prashant-Dey-kendr-run-Do-the-research-about_1775015801775.txt
config/: security-tools.env.example
docs/: architecture.md  assistant_platform_release_roadmap.md  cli.md  configuration.md  core_workflows.md  examples.md  index.md  install.md  integration_checklist.md  integrations.md  launch_demo_prompts.md  llm_feature_delivery_guide.md  local_drive_case_study.md  plugin_sdk.md  product_overview.md  project_upgrade_plan.md  quickstart.md  security.md  super_agent_stack.md  superrag_feature.md  troubleshooting.md  verification.md
electron-app/: README.md  electron-builder.config.mjs  package-lock.json  package.json
electron-app/scripts/: build-backend-bundle.mjs  ensure-icons.mjs  release.mjs
kendr/: __init__.py  agent_routing.py  approval_resume_handlers.py  chat_context.py  cli.py  cli_output.py  connector_registry.py  daemon.py  definitions.py  discovery.py  execution_trace.py  extension_host.py  extension_permissions.py  gateway_server.py  llm_router.py  machine_index.py  model_workflows.py  path_utils.py  project_manager.py  recovery.py  registry.py  runtime.py  setup_ui.py  skill_catalog.py  skill_manager.py  skill_registry.py  software_inventory.py  ui_server.py  unicode_utils.py  workflow_contract.py  workflow_execution_policies.py  workflow_registry.py
kendr/domain/: __init__.py  local_drive.py
kendr/http/: __init__.py  resume.py  session_keys.py
kendr/orchestration/: __init__.py  intent_discovery.py  state.py
kendr/persistence/: __init__.py  core.py  mcp_store.py  run_store.py  setup_store.py  superrag_store.py
kendr/providers/: __init__.py  auth.py
kendr/setup/: __init__.py  catalog.py  integrations.py
mcp_servers/: research_server.py
plugin_templates/: __init__.py  echo_plugin.py  provider_plugin.py
plugin_templates/project_stacks/: __init__.py  custom_freeform.py  django_react_postgres.py  express_prisma_postgres.py  fastapi_postgres.py  fastapi_react_postgres.py  mern_microservices_mongodb.py  nextjs_prisma_postgres.py  nextjs_static_site.py  pern_postgres.py
project_templates/: README.md
project_templates/fastapi_postgres/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
project_templates/nextjs_static_site/: README.md  package.json  tailwind.config.ts
project_templates/pern_postgres/: .env.example  .gitignore  README.md  docker-compose.yml
scripts/: bootstrap_local_state.py  build-release.ps1  build-release.sh  build_backend_bundle.py  ci_check.sh  install.ps1  install.sh  install_choco.ps1  preflight-security-tools.sh  release_gate_non_socket.py  scan-website.sh  setup-security-tools.sh  uninstall.ps1  uninstall.sh  verify.py
superagent/: __init__.py  cli.py  gateway_server.py  runtime.py  setup_ui.py
superagent/orchestration/: state.py
tasks/: a2a_protocol.py  agent_factory_tasks.py  auth_security_tasks.py  aws_tasks.py  backend_builder_tasks.py  coding_tasks.py  communication_tasks.py  database_architect_tasks.py  dependency_manager_tasks.py  dev_pipeline_tasks.py  devops_tasks.py  document_formatter_tasks.py  elevenlabs_tasks.py  excel_tasks.py  file_memory.py  frontend_builder_tasks.py  gateway_tasks.py  github_client.py  github_tasks.py  intelligence_tasks.py  long_document_tasks.py  md_to_pdf.py  monitoring_tasks.py  os_tasks.py  plagiarism_checker.py  planning_tasks.py  post_setup_tasks.py  privileged_control.py  project_blueprint_tasks.py  project_generation_orchestrator.py  project_scaffold_tasks.py  project_verifier_tasks.py  reddit_tasks.py  report_tasks.py  research_infra.py  research_output.py  research_pipeline_tasks.py  research_tasks.py  review_tasks.py  search_tasks.py  (+13 more)
tests/: __init__.py  test_cli.py  test_cli_entrypoint.py  test_discovery_resilience.py  test_everyday_skills.py  test_excel_agent.py  test_execution_trace.py  test_extension_sandbox.py  test_gateway_surface.py  test_github_agent.py  test_imports.py  test_intent_discovery.py  test_llm_router.py  test_local_drive_agent.py  test_long_document_planning.py  test_machine_index.py  test_mcp_store.py  test_model_workflows.py  test_monitoring_store.py  test_orchestration_state.py  test_os_agent.py  test_os_tasks.py  test_path_utils.py  test_persistence_core.py  test_phase0_cli_smoke.py  test_phase0_runtime_smoke.py  test_plagiarism_checker.py  test_planning_tasks.py  test_plugin_sdk.py  test_privileged_control.py  test_project_manager.py  test_project_stack_templates.py  test_recovery.py  test_registry.py  test_release_gate_non_socket.py  test_report_tasks.py  test_research_infra.py  test_research_tasks.py  test_runtime_multimodel.py  test_runtime_orchestration_persistence.py  (+13 more)
(+230 files in other folders)
