[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kendr-runtime"
version = "0.1.0"
description = "Plugin-driven multi-agent runtime and orchestration CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph",
  "langchain",
  "langchain-openai",
  "openai",
  "charset-normalizer>=3,<4",
  "python-dotenv",
  "beautifulsoup4",
  "pypdf",
  "python-docx",
  "sqlalchemy",
  "qdrant-client",
  "fastmcp",
  "telethon",
  "boto3",
  "playwright",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
kendr = "kendr.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kendr*", "tasks*", "mcp_servers*", "plugin_templates*"]
exclude = ["tests", "docs", "output", "logs"]
